--- a/src/main/resources/templates/user/mypage/mypage.html
+++ b/src/main/resources/templates/user/mypage/mypage.html
@@ -25,24 +25,24 @@
 	<div class="main-content">
 	<div id="content-area">
 		<div class="page-title">MY페이지</div>
-		<table class="stats-table">
-		<thead>
-			<tr>
-			<th>지원완료</th>
-			<th>서류통과</th>
-			<th>최종합격</th>
-			<th>불합격</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			<td>0</td>
-			</tr>
-		</tbody>
-		</table>
+		<div class="stats-grid">
+   		<div class="stats-item">
+        	<div class="stats-label">지원완료</div>
+        	<div class="stats-number highlight">1</div>
+    	</div>
+    	<div class="stats-item">
+        	<div class="stats-label">전형 진행중</div>
+        	<div class="stats-number">0</div>
+    	</div>
+    	<div class="stats-item">
+        	<div class="stats-label">최종합격</div>
+        	<div class="stats-number">0</div>
+    	</div>
+    	<div class="stats-item">
+        	<div class="stats-label">불합격</div>
+        	<div class="stats-number">0</div>
+   		</div>
+		</div><br><br>
 		<!-- 기본정보 섹션 -->
 		<div class="info-section">
 			<div class="info-title">기본정보</div>
