--- a/src/main/resources/templates/login/joinUserForm.html
+++ b/src/main/resources/templates/login/joinUserForm.html
@@ -511,7 +511,7 @@ function isForYou(){
             <div class="form-group">
               <label class="form-label">주소</label>
               <!-- 주소찾기input 클릭시 다음주소API호출 -->
-              <div class="zipcode-box" style="margin-bottom: 10px;">
+              <div class="zipcode-box" >
                <input type="text" id="zipcode" name="zipcode" class="form-input addr" placeholder="우편번호" readonly>
                <input type="button" id="openKakaoMap" class="btn btn-secondary" value="우편번호 찾기" >
               </div>
