--- a/src/main/resources/templates/user/job_posting/company_info.html
+++ b/src/main/resources/templates/user/job_posting/company_info.html
@@ -6,7 +6,7 @@
   <th:block th:replace="~{fragments/external_file :: cdn_block}"></th:block>
   <link rel="stylesheet" th:href="@{/user/css/header.css}" />
   <link rel="stylesheet" th:href="@{/user/css/footer.css}" />
-  <link rel="stylesheet" th:href="@{/user/css/main_page.css}"/>
+  <link rel="stylesheet" th:href="@{/user/jobPosting/css/main_page.css}"/>
   <style type="text/css">
   
   h4 {
