--- a/src/main/resources/templates/user/mypage/mail_list.html
+++ b/src/main/resources/templates/user/mypage/mail_list.html
@@ -144,6 +144,11 @@
 	transition: background-color 0.2s ease;
 }
 
+.application-item.read-mail {
+    background-color: #f4f4f4;  
+    opacity: 0.7;               
+}
+
 .application-item:hover {
 	background-color: #f8f9fa;
 }
@@ -346,7 +351,8 @@
             <div class="filter-select">
                 <select>
                     <option>전체</option>
-                    <option>메일</option>
+                    <option>공지/알림</option>
+                    <option>지원 결과</option>
                     <option>포지션 제안</option>
                 </select>
             </div>
@@ -363,26 +369,22 @@
                     </div>
                 </div>
                 <div class="application-actions">
-                    <span class="status-badge status-completed">메일</span>
+                    <span class="status-badge status-completed">지원 결과</span>
                 </div>
             </div>
-        </div>
-        <div class="application-list">
-            <div class="application-item">
+            <div class="application-item read-mail">
                 <div class="application-info">
-                    <div class="company-name">LG CNS</div>
-                    <div class="job-title">상반기 대졸신입공채 서류통과 안내</div>
+                    <div class="company-name">민기인력</div>
+                    <div class="job-title">[긴급공지]민기 인력 웹사이트 점검 예정</div>
                     <div class="application-meta">
                         <span>2025-07-09 16:32</span>
                     </div>
                 </div>
                 <div class="application-actions">
-                    <span class="status-badge status-completed">메일</span>
+                    <span class="status-badge status-passed">공지/알림</span>
                 </div>
             </div>
-        </div>
-        <div class="application-list">
-            <div class="application-item">
+            <div class="application-item read-mail">
                 <div class="application-info">
                     <div class="company-name">마이크로소프트</div>
                     <div class="job-title">마이크로소프트에서 포지션 제안 드립니다.</div>
