--- a/src/main/resources/templates/fragments/corpHeader.html
+++ b/src/main/resources/templates/fragments/corpHeader.html
@@ -66,7 +66,7 @@
 	        </td>
 	        <td>
 	          <div class="corp-submenu-item">
-	            <span class="corp-submenu-link">지원자 관리</span>
+	            <a th:href="@{/corp/applicant}"><span class="corp-submenu-link">지원자 관리</span></a>
 	          </div>
 	        </td>
 	        <td>
