--- a/src/main/resources/templates/corp/main_page.html
+++ b/src/main/resources/templates/corp/main_page.html
@@ -17,8 +17,8 @@ function hideSubmenu() {
     document.querySelector('.corp-overlay').classList.remove('active');
 }
 
-const user = `[[${user.email}]]`; //model가져오기 
-console.log(user);
+//Thymeleaf에서 사용하는 `[[...]]` 문법은 HTML 주석처럼 무시되지 않고, 브라우저로 보내지기 전에 서버에서 먼저 처리되기 때문입니다.
+
 
 </script>
 </head>
