--- a/src/main/resources/templates/corp/jobPosting/jobPostingForm.html
+++ b/src/main/resources/templates/corp/jobPosting/jobPostingForm.html
@@ -115,9 +115,9 @@ function getPositionList() {
 
                     <div class="form-group">
                         <label class="form-label required">포지션</label>
-                        <input type="text" id="positionName" name="positionSeq" class="form-input" placeholder="포지션 검색" autocomplete="off">
+                        <input type="text" id="positionName" name="positionSeq" class="form-input" placeholder="포지션 검색" style="position: relative;" autocomplete="off">
                         <ul id="resultBox" class="list-group position-absolute w-100" style="z-index: 1000;"></ul>
-                        <input type="text" id="positionSeq">
+                        <input type="text" id="positionSeq"> <!-- hidden으로 -->
                     </div>
                     
                     <div class="form-group">
