--- a/src/main/resources/templates/fragments/corpHeader.html
+++ b/src/main/resources/templates/fragments/corpHeader.html
@@ -28,7 +28,7 @@
 	  <div id="corp-top-bar">
 	    <a th:href="@{/}"><img th:src="@{/images/logo.png}" alt="민기인력 로고" class="corp-logo"></a> 
 	    <div class="corp-top-menu">
-	    	<div id="userInfo" th:if="${user != null and user.role eq 'ROLE_CORP'}" data-user="${user}" >
+	    	<div id="userInfo" th:if="${user != null and user.role eq 'ROLE_CORP'}" >
 		      <a th:href="@{/void}" th:text="${user.email}" class="corp-header-link" style="color: #1abc9c; text-decoration: underline;" onclick="alert('마이페이지 링크입니다.')" ></a> |
 		      <a th:href="@{/void}" class="corp-header-link">로그아웃</a> |
 		      <a th:href="@{/void}" class="corp-header-link">고객센터</a>
