--- a/src/main/resources/static/corp/jobPosting/jobPostingForm.css
+++ b/src/main/resources/static/corp/jobPosting/jobPostingForm.css
@@ -318,10 +318,16 @@
   padding-left: 0; /* 점 없어도 들여쓰기 남는 경우 제거 */
 }
 
+.position-box {
+	position: relative;
+	
+}
+
 #resultBox {
 	background-color: #FAFDF4;
 	border-color: black;
 	width: 100%;
+	z-index: 1000;
 	
 }
 
@@ -329,3 +335,17 @@
 	cursor: pointer;
 }
 
+#resultBox li:hover {
+	background-color: #e0d6b4;
+}
+
+
+.tech-tag {
+  margin: 2px;
+  cursor: default;
+}
+.tech-tag .btn-close {
+  margin-left: 6px;
+  font-size: 0.7rem;
+  vertical-align: middle;
+}
