--- a/src/main/resources/templates/fragments/corpHeader.html
+++ b/src/main/resources/templates/fragments/corpHeader.html
@@ -35,7 +35,7 @@
 	    	</div>
 	    	<div th:unless="${user != null and user.role eq 'ROLE_CORP'}" >
 		      <a th:href="@{/login}" class="corp-header-link">로그인</a> |
-		      <a th:href="@{/void}" class="corp-header-link">회원가입</a> |
+		      <a th:href="@{/corp/join}" class="corp-header-link">회원가입</a> |
 		      <a th:href="@{/void}" class="corp-header-link">고객센터</a>
 	    	</div>
 	    </div>
